--- a/dashboard-tiles.html
+++ b/dashboard-tiles.html
@@ -23,7 +23,7 @@
       loading .. / no dashboard tiles
     </template>
     <template is="dom-repeat" items="{{list}}">
-      <dashboard-tile item="[[item]]" dash-ref="{{item.}}"></dashboard-tile>
+      <dashboard-tile item="[[item]]" dash-ref="{{item.theData}}"></dashboard-tile>
     </template>
   </template>
 </dom-module>
