--- a/dashboard-tiles.html
+++ b/dashboard-tiles.html
@@ -1,11 +1,5 @@
-<link rel="import" href="../paper-material/paper-material.html">
-<link rel="import" href="../date-display/date-display.html">
-<link rel="import" href="../paper-item/paper-item.html">
-<link rel="import" href="../paper-item/paper-item-body.html">
-<link rel="import" href="../paper-item/paper-icon-item.html">
 <link rel="import" href="../dashboard-tile/dashboard-tile.html">
-<link rel="import" href="../text-avatar/text-avatar.html">
-<link rel="import" href="../count-up/count-up.html">
+<link rel="import" href="../paper-spinner/paper-spinner.html">
 <link rel="import" href="../polymer/polymer.html">
 <!--
   `<dashboard-tiles></dashboard-tiles>` demo
@@ -18,9 +12,12 @@
         font-family: 'Roboto', 'Noto', sans-serif;
         -webkit-font-smoothing: antialiased;
       }
+      paper-spinner {
+        text-align:center
+      }
     </style>
     <template is="dom-if" if="[[!list.length]]">
-      loading .. / no dashboard tiles
+      <paper-spinner active></paper-spinner>
     </template>
     <template is="dom-repeat" items="{{list}}">
       <dashboard-tile dash-ref="[[item.ref]]"></dashboard-tile>
