--- a/dashboard-tiles.html
+++ b/dashboard-tiles.html
@@ -12,6 +12,7 @@
         font-family: 'Roboto', 'Noto', sans-serif;
         -webkit-font-smoothing: antialiased;
       }
+      paper-fab {background-color: #99c75f;position:fixed;bottom:26px;right:36px}
       paper-spinner {
         text-align:center
       }
