--- a/dashboard-tiles.html
+++ b/dashboard-tiles.html
@@ -58,6 +58,11 @@
         value:"",
       },
     },
+    addDashboardTile: function(userRef){
+       userRef.collection('dashboards').add({
+         weight:0
+       })
+    },
     setup: function(userRef){
       this.allDashs = {}
       if (!this.unSubDash) {
