--- a/dashboard-tiles.html
+++ b/dashboard-tiles.html
@@ -68,7 +68,7 @@
       },
     },
     addDashboardTile: function(){
-      this.list.push({})
+      this.push("list",{})
     },
     setup: function(userRef){
       this.allDashs = {}
