--- a/dashboard-tiles.html
+++ b/dashboard-tiles.html
@@ -69,7 +69,7 @@
     },
     addDashboardTile: function(){
       this.push("list",{
-        directorySources: [],
+        ref: "",
       })
     },
     setup: function(userRef){
