--- a/dashboard-tiles.html
+++ b/dashboard-tiles.html
@@ -56,7 +56,7 @@
         type: String,
       },
       getReady:{
-        computed: "setup(userRef)",
+        computed: "setup(userRef, display)",
       },
       canCreate: {
         type:Boolean,
