--- a/dashboard-tiles.html
+++ b/dashboard-tiles.html
@@ -73,6 +73,9 @@
     addDashboardTile: function(){
       this.push("list",{
         ref: "",
+        display: {
+          home: 0
+        },
       })
     },
     setup: function(userRef, display){
