--- a/dashboard-tiles.html
+++ b/dashboard-tiles.html
@@ -23,7 +23,7 @@
       <div style="text-align: center"><paper-spinner active></paper-spinner></div>
     </template>
     <template is="dom-repeat" items="{{list}}">
-      <dashboard-tile go="{{go}}" dash-ref="[[item.ref]]" can-create="[[canCreate]]" dashboards-ref="[[dashboards.ref]]"></dashboard-tile>
+      <dashboard-tile dash-ref="[[item.ref]]" can-create="[[canCreate]]" dashboards-ref="[[dashboards.ref]]"></dashboard-tile>
     </template>
     <template is="dom-if" if="[[canCreate]]">
       <paper-fab icon="add" on-tap="addDashboardTile"></paper-fab>
